--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,8 @@ dependencies:
   video_player: ^2.9.5
   just_audio: ^0.9.46
   intl: ^0.20.2
+  youtube_player_flutter: ^9.1.1
+  flutter_staggered_animations: ^1.1.1
 
 dev_dependencies:
   flutter_test:
