--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,7 @@ dependencies:
   intl: ^0.20.2
   youtube_player_flutter: ^9.1.1
   flutter_staggered_animations: ^1.1.1
+  audio_video_progress_bar: ^2.0.3
 
 dev_dependencies:
   flutter_test:
