--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,6 +53,7 @@ dependencies:
   youtube_player_flutter: ^9.1.1
   flutter_staggered_animations: ^1.1.1
   audio_video_progress_bar: ^2.0.3
+  url_launcher: ^6.3.1
 
 dev_dependencies:
   flutter_test:
