--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,6 +54,7 @@ dependencies:
   flutter_staggered_animations: ^1.1.1
   audio_video_progress_bar: ^2.0.3
   url_launcher: ^6.3.1
+  flutter_staggered_grid_view: ^0.7.0
 
 dev_dependencies:
   flutter_test:
