--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,6 +55,7 @@ dependencies:
   audio_video_progress_bar: ^2.0.3
   url_launcher: ^6.3.1
   flutter_staggered_grid_view: ^0.7.0
+  file_picker: ^10.0.0
 
 dev_dependencies:
   flutter_test:
