--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -1,3 +1,7 @@
 org.gradle.jvmargs=-Xmx8G -XX:MaxMetaspaceSize=4G -XX:ReservedCodeCacheSize=512m -XX:+HeapDumpOnOutOfMemoryError
 android.useAndroidX=true
 android.enableJetifier=true
+MY_KEYSTORE_PASSWORD=flipCode_career_culture
+MY_KEY_ALIAS=flipCode_career_culture
+MY_KEY_PASSWORD=flipCode_career_culture
+
