--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,6 +56,7 @@ dependencies:
   url_launcher: ^6.3.1
   flutter_staggered_grid_view: ^0.7.0
   file_picker: ^10.0.0
+  pinput: ^5.0.1
 
 dev_dependencies:
   flutter_test:
