--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -59,6 +59,7 @@ dependencies:
   pinput: ^5.0.1
   mime: ^2.0.0
   http_parser: ^4.1.2
+  dropdown_search: ^6.0.2
 
 dev_dependencies:
   flutter_test:
