--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -60,6 +60,8 @@ dependencies:
   mime: ^2.0.0
   http_parser: ^4.1.2
   dropdown_search: ^6.0.2
+  firebase_messaging: ^15.2.5
+  flutter_local_notifications: ^19.1.0
 
 dev_dependencies:
   flutter_test:
