--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -62,6 +62,7 @@ dependencies:
   dropdown_search: ^6.0.2
   firebase_messaging: ^15.2.5
   flutter_local_notifications: ^19.1.0
+  permission_handler: ^12.0.0+1
 
 dev_dependencies:
   flutter_test:
