--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -63,6 +63,7 @@ dependencies:
   firebase_messaging: ^15.2.5
   flutter_local_notifications: ^19.1.0
   permission_handler: ^12.0.0+1
+  share_plus: ^11.0.0
 
 dev_dependencies:
   flutter_test:
