--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -64,6 +64,7 @@ dependencies:
   flutter_local_notifications: ^19.1.0
   permission_handler: ^12.0.0+1
   share_plus: ^11.0.0
+  app_links: ^6.4.0
 
 dev_dependencies:
   flutter_test:
