--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -65,6 +65,7 @@ dependencies:
   permission_handler: ^12.0.0+1
   share_plus: ^11.0.0
   app_links: ^6.4.0
+  flutter_html: ^3.0.0
 
 dev_dependencies:
   flutter_test:
