--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -66,6 +66,8 @@ dependencies:
   share_plus: ^11.0.0
   app_links: ^6.4.0
   flutter_html: ^3.0.0
+  flutter_sound: ^9.28.0
+  path_provider: ^2.1.5
 
 dev_dependencies:
   flutter_test:
