--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,5 +1,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android" package="com.flipcode.career_culture">
   <uses-permission android:name="android.permission.INTERNET" />
+  <queries>
+    <provider android:authorities="com.facebook.katana.provider.PlatformProvider" />
+  </queries>
   <application android:label="mindful_youth" android:name="${applicationName}" android:icon="@mipmap/ic_launcher" android:allowBackup="false" android:fullBackupContent="false">
     <activity android:name=".MainActivity" android:exported="true" android:launchMode="singleTop" android:taskAffinity="" android:theme="@style/LaunchTheme" android:configChanges="orientation|keyboardHidden|keyboard|screenSize|smallestScreenSize|locale|layoutDirection|fontScale|screenLayout|density|uiMode" android:hardwareAccelerated="true" android:windowSoftInputMode="adjustResize">
       <!-- Specifies an Android theme to apply to this Activity as soon as
@@ -21,6 +24,13 @@
       </intent-filter>
 
     </activity>
+    <!-- facebook login setup  -->
+    <meta-data android:name="com.facebook.sdk.ApplicationId" android:value="1177664930303762"/>
+    <meta-data android:name="com.facebook.sdk.ClientToken" android:value="fd19117ad6d9df3eb0278e4f38ee03a1"/>
+    <activity android:name="com.facebook.FacebookActivity" android:configChanges="keyboard|keyboardHidden|screenLayout|screenSize|orientation" android:label="@string/app_name" />
+    <provider android:authorities="com.facebook.app.FacebookContentProvider1177664930303762" android:name="com.facebook.FacebookContentProvider" android:exported="true"/>
+
+    <!-- facebook login setup ends  -->
     <!-- Don't delete the meta-data below.
              This is used by the Flutter tool to generate GeneratedPluginRegistrant.java -->
     <meta-data android:name="flutterEmbedding" android:value="2" />
