--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -68,6 +68,7 @@ dependencies:
   flutter_html: ^3.0.0
   flutter_sound: ^9.28.0
   path_provider: ^2.1.5
+  flutter_facebook_auth: ^7.1.2
 
 dev_dependencies:
   flutter_test:
