--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -69,6 +69,7 @@ dependencies:
   flutter_sound: ^9.28.0
   path_provider: ^2.1.5
   flutter_facebook_auth: ^7.1.2
+  shimmer: ^3.0.0
 
 dev_dependencies:
   flutter_test:
