--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -70,7 +70,7 @@ dependencies:
   path_provider: ^2.1.5
   flutter_facebook_auth: ^7.1.2
   shimmer: ^3.0.0
-  flutter_expandable_fab: ^2.5.1
+  flutter_speed_dial: ^7.0.0
 
 dev_dependencies:
   flutter_test:
