almost done with assessment quiz test, both test and review view is ready and working, unit testing pending
added a blur layer that will not vanish until user start the test by btn, than can select answer

working on the state after test and a ui page for the result

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android" package="com.flipcode.career_culture">
   <uses-permission android:name="android.permission.INTERNET" />
+  <!-- <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/> -->
   <queries>
     <provider android:authorities="com.facebook.katana.provider.PlatformProvider" />
   </queries>
