fixed and filterd out the answers for both pages of assessment, only show checkbox and radio for first, and second for video, audio and images
added checks for is first assessment finished, if second is finished, or both finished and if flags is not approprieate

added screenshot dependency, for share screenshot to other platform

fixed ui no data found in assessment screen

created share screen shot method

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -73,6 +73,7 @@ dependencies:
   flutter_speed_dial: ^7.0.0
   geolocator: ^14.0.1
   geocoding: ^4.0.0
+  screenshot: ^3.0.0
 
 dev_dependencies:
   flutter_test:
