working on faq screen ui

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -74,6 +74,7 @@ dependencies:
   geolocator: ^14.0.1
   geocoding: ^4.0.0
   screenshot: ^3.0.0
+  flutter_svg: ^2.1.0
 
 dev_dependencies:
   flutter_test:
