working on refer screen ui ... in progress

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -75,6 +75,7 @@ dependencies:
   geocoding: ^4.0.0
   screenshot: ^3.0.0
   flutter_svg: ^2.1.0
+  timeline_tile: ^2.0.0
 
 dev_dependencies:
   flutter_test:
