--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -76,6 +76,7 @@ dependencies:
   screenshot: ^3.0.0
   flutter_svg: ^2.1.0
   timeline_tile: ^2.0.0
+  ffmpeg_kit_flutter_new: ^2.0.0
 
 dev_dependencies:
   flutter_test:
