--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -77,6 +77,7 @@ dependencies:
   flutter_svg: ^2.1.0
   timeline_tile: ^2.0.0
   ffmpeg_kit_flutter_new: ^2.0.0
+  webview_flutter: ^4.13.0
 
 dev_dependencies:
   flutter_test:
