--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -82,7 +82,7 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
-
+  cupertino_icons: ^1.0.6
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
   # activated in the `analysis_options.yaml` file located at the root of your
