--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -81,6 +81,25 @@
   <key>ClientId</key>
   <string>454305239270-pvc7qv14lfes0bijorf04pdrokqp7j0u.apps.googleusercontent.com</string>
 </dict>
-
+<key>CFBundleURLTypes</key>
+<array>
+  <dict>
+  <key>CFBundleURLSchemes</key>
+  <array>
+    <string>fb1177664930303762</string>
+  </array>
+  </dict>
+</array>
+<key>FacebookAppID</key>
+<string>1177664930303762</string>
+<key>FacebookDisplayName</key>
+<string>Career Culture</string>
+<key>LSApplicationQueriesSchemes</key>
+<array>
+  <string>fbapi</string>
+  <string>fb-messenger-api</string>
+  <string>fbauth2</string>
+  <string>fbshareextension</string>
+</array>
 </dict>
 </plist>
