fixed bug in google sign up issue on ios

--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -68,28 +68,28 @@
     <string>This app needs access to the microphone to record audio.</string>
 	<key>CFBundleURLTypes</key>
 <array>
+  <!-- Google Sign-In -->
   <dict>
     <key>CFBundleURLSchemes</key>
     <array>
       <string>com.googleusercontent.apps.454305239270-pvc7qv14lfes0bijorf04pdrokqp7j0u</string>
     </array>
   </dict>
-</array>
 
+  <!-- Facebook -->
+  <dict>
+    <key>CFBundleURLSchemes</key>
+    <array>
+      <string>fb1177664930303762</string>
+    </array>
+  </dict>
+</array>
 <key>GoogleSignIn</key>
 <dict>
   <key>ClientId</key>
   <string>454305239270-pvc7qv14lfes0bijorf04pdrokqp7j0u.apps.googleusercontent.com</string>
 </dict>
-<key>CFBundleURLTypes</key>
-<array>
-  <dict>
-  <key>CFBundleURLSchemes</key>
-  <array>
-    <string>fb1177664930303762</string>
-  </array>
-  </dict>
-</array>
+
 <key>FacebookAppID</key>
 <string>1177664930303762</string>
 <key>FacebookDisplayName</key>
