fixed ad id releated issue in play console while uploading build bundle
updated app version to 1.0.1

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,4 +1,4 @@
-<manifest xmlns:android="http://schemas.android.com/apk/res/android" package="com.flipcode.career_culture">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" package="com.flipcode.career_culture" xmlns:tools="http://schemas.android.com/tools">
   <uses-permission android:name="android.permission.INTERNET" />
   <!-- <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/> -->
   <queries>
@@ -57,4 +57,5 @@
       <data android:scheme="https" />
     </intent>
   </queries>
+  <uses-permission android:name="com.google.android.gms.permission.AD_ID" tools:node="remove"/>
 </manifest>
