--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -79,6 +79,7 @@ dependencies:
   ffmpeg_kit_flutter_new: ^2.0.0
   webview_flutter: ^4.13.0
   upgrader: ^11.4.0
+  photo_view: ^0.15.0
 
 dev_dependencies:
   flutter_test:
