--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -80,6 +80,7 @@ dependencies:
   webview_flutter: ^4.13.0
   upgrader: ^11.4.0
   photo_view: ^0.15.0
+  flutter_html_iframe: ^3.0.0
 
 dev_dependencies:
   flutter_test:
