migrate to new base url

--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-BASE_URL=https://career-culture.flipcodesolutions.com/api
-APP_URL=https://career-culture.flipcodesolutions.com
+BASE_URL=https://app.careerandculture.org/api
+APP_URL=https://app.careerandculture.org
