--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -20,8 +20,8 @@
         <action android:name="android.intent.action.VIEW" />
         <category android:name="android.intent.category.DEFAULT" />
         <category android:name="android.intent.category.BROWSABLE" />
-        <data android:scheme="http" android:host="career-culture.flipcodesolutions.com" />
-        <data android:scheme="https" android:host="career-culture.flipcodesolutions.com" />
+        <data android:scheme="http" android:host="app.careerandculture.org" />
+        <data android:scheme="https" android:host="app.careerandculture.org" />
       </intent-filter>
 
     </activity>
